[package]
name = "monet_core"
authors = ["pan@fil.org"]
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
cid = "0.11.0"
combine = "4.6.6"
wasm-bindgen = "0.2.93"
parser = {path = "../parser"}

[build-dependencies]
combine = "4.6.6"
parser = {path = "../parser"}

[build]
script = "build.rs"

[lib]
name = "monet_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

